--- a/static/style/page.less
+++ b/static/style/page.less
@@ -1,3 +1,64 @@
 body{
-	margin: 50px 0 0 0;
+	margin: 60px 0 0 0;
+}
+
+// page index
+//-----------------------------------------------------
+#page-index{
+	.work-item{
+		.work-title{
+			font-size: 35px;
+			line-height: 40px;
+			margin-bottom: 5px;
+			font-weight: bold;
+			font-family: '宋体';
+		}
+
+		.work-content{
+			font-size: 18px;
+			line-height: 25px;
+			font-family: '';
+		}
+	}
+}
+
+// page author
+//-----------------------------------------------------
+#page-author{
+	.author-item{
+		.author{
+			font-size: 35px;
+			line-height: 40px;
+			margin-bottom: 5px;
+			font-weight: bold;
+			font-family: '宋体';			
+		}
+
+		.author-introduction{
+			font-size: 18px;
+			line-height: 25px;
+			font-family: '';			
+		}
+	}
+}
+
+
+// page dynasty
+//-----------------------------------------------------
+#page-dynasty{
+	.dynasty-item{
+		.dynasty{
+			font-size: 35px;
+			line-height: 40px;
+			margin-bottom: 5px;
+			font-weight: bold;
+			font-family: '宋体';
+		}
+
+		.dynasty-introduction{
+			font-size: 18px;
+			line-height: 25px;
+			font-family: '';
+		}
+	}
 }
