--- a/static/style/page.css
+++ b/static/style/page.css
@@ -1,1 +1,7 @@
-body{margin:50px 0 0 0;}
+body{margin:60px 0 0 0;}
+#page-index .work-item .work-title{font-size:35px;line-height:40px;margin-bottom:5px;font-weight:bold;font-family:'宋体';}
+#page-index .work-item .work-content{font-size:18px;line-height:25px;font-family:'';}
+#page-author .author-item .author{font-size:35px;line-height:40px;margin-bottom:5px;font-weight:bold;font-family:'宋体';}
+#page-author .author-item .author-introduction{font-size:18px;line-height:25px;font-family:'';}
+#page-dynasty .dynasty-item .dynasty{font-size:35px;line-height:40px;margin-bottom:5px;font-weight:bold;font-family:'宋体';}
+#page-dynasty .dynasty-item .dynasty-introduction{font-size:18px;line-height:25px;font-family:'';}
