--- a/static/style/page.less
+++ b/static/style/page.less
@@ -14,6 +14,11 @@ body{
 			font-family: '宋体';
 		}
 
+		.work-author{
+			font-size: 18px;
+			margin-bottom: 10px;
+		}
+
 		.work-content{
 			font-size: 18px;
 			line-height: 25px;
