--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,10 @@
 {% block body %}
 
 	{% for work in works %}
-	<div class='work-item'>
-		<div class='work-title'>{{ work[1] }}</div>
-		<div class='work-content'>{{ work[2] }}</div>
+	<div class="work-item">
+		<div class="work-title"><a href="{{ url_for('work/' + work.WorkID) }}">{{ work.Title }}</a></div>
+		<div class="work-author">[<a href="{{ url_for('dynasty') }}">{{ work.Dynasty }}</a>] <a href="{{ url_for('author/work') }}">{{ work.Author }}</a></div>
+		<div class="work-content">{{ work.Content }}</div>
 	</div>
 	{% endfor %}
 
