--- a/static/style/page.less
+++ b/static/style/page.less
@@ -27,6 +27,29 @@ body{
 	}
 }
 
+// page single work
+//-----------------------------------------------------
+#page-single-work{
+	.work-title{
+		font-size: 35px;
+		line-height: 40px;
+		margin-bottom: 5px;
+		font-weight: bold;
+		font-family: '宋体';
+	}
+
+	.work-author{
+		font-size: 18px;
+		margin-bottom: 10px;
+	}
+
+	.work-content{
+		font-size: 18px;
+		line-height: 25px;
+		font-family: '';
+	}
+}
+
 // page author
 //-----------------------------------------------------
 #page-author{
@@ -47,6 +70,23 @@ body{
 	}
 }
 
+// page single author
+//-----------------------------------------------------
+#page-single-author{
+	.author{
+		font-size: 35px;
+		line-height: 40px;
+		margin-bottom: 5px;
+		font-weight: bold;
+		font-family: '宋体';			
+	}
+
+	.author-introduction{
+		font-size: 18px;
+		line-height: 25px;
+		font-family: '';			
+	}
+}
 
 // page dynasty
 //-----------------------------------------------------
@@ -65,5 +105,23 @@ body{
 			line-height: 25px;
 			font-family: '';
 		}
+	}
+}
+
+// page single dynasty
+//-----------------------------------------------------
+#page-single-dynasty{
+	.dynasty{
+		font-size: 35px;
+		line-height: 40px;
+		margin-bottom: 5px;
+		font-weight: bold;
+		font-family: '宋体';
+	}
+
+	.dynasty-introduction{
+		font-size: 18px;
+		line-height: 25px;
+		font-family: '';
 	}
 }
