--- a/templates/author.html
+++ b/templates/author.html
@@ -1,15 +1,14 @@
 {% extends "layout.html" %}
 
 {% block page_title %}作者{% endblock %}
-
 {% block page_id%}page-author{% endblock %}
 
 {% block body %}
 
 	{% for author in authors %}
 	<div class='author-item'>
-		<div class='author'>{{ author[1] }}</div>
-		<div class='author-introduction'>{{ author[2] }}</div>
+		<div class='author'><a href="{{ url_for('single_author', authorID=author.AuthorID) }}">{{ author.Author }}</a></div>
+		<div class='author-introduction'>{{ author.Introduction }}</div>
 	</div>
 	{% endfor %}
 
