--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,16 @@
 {% extends "layout.html" %}
 
 {% block page_title %}西窗烛{% endblock %}
-
 {% block page_id%}page-index{% endblock %}
 
 {% block body %}
 
 	{% for work in works %}
 	<div class="work-item">
-		<div class="work-title"><a href="{{ url_for('work/' + work.WorkID) }}">{{ work.Title }}</a></div>
-		<div class="work-author">[<a href="{{ url_for('dynasty') }}">{{ work.Dynasty }}</a>] <a href="{{ url_for('author/work') }}">{{ work.Author }}</a></div>
+		<div class="work-title"><a href="{{ url_for('single_work', workID = work.WorkID) }}">{{ work.Title }}</a></div>
+		<div class="work-author">
+			[<a href="{{ url_for('single_dynasty', dynastyID = work.DynastyID) }}">{{ work.Dynasty }}</a>]
+			<a href="{{ url_for('single_author', authorID=work.AuthorID) }}">{{ work.Author }}</a></div>
 		<div class="work-content">{{ work.Content }}</div>
 	</div>
 	{% endfor %}
