--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,8 @@
 		<title>{% block page_title %}西窗烛{% endblock %}</title>
 		<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style/bootstrap.min.css') }}">
 		<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style/page.css') }}">
+		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.9.0.min.js')}}"></script>
+		<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
 	</head>
 
 	<body id="{% block page_id %}{% endblock %}">
@@ -11,14 +13,45 @@
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container">
+					<!-- logo -->
 					<a class="brand" href="{{ url_for('index') }}">西窗烛</a>
 
+					<!-- nav -->
 					<ul class="nav">
 						<li><a href="{{ url_for('index') }}">首页</a></li>
 						<li><a href="{{ url_for('author') }}">作者</a></li>
 						<li><a href="{{ url_for('dynasty') }}">朝代</a></li>
-						<li><a href="{{ url_for('add_work') }}">添加</a></li>
 					</ul>
+
+					<!-- search -->
+					<form class="navbar-search">
+						<input type="text" class="search-query" placeholder="Search">
+					</form>
+
+					<!-- user info -->
+					<ul class="nav pull-right">
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+								hustlzp <b class="caret"></b>
+							</a>
+							<ul class="dropdown-menu">
+								<li><a href="#">退出</a></li>
+							</ul>
+						</li>
+					</ul>
+
+					<!-- add -->
+					<div class="btn-group pull-right">
+						<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+							添加 <span class="caret"></span>
+						</a>
+
+						<ul class="dropdown-menu">
+							<li><a href="{{ url_for('add_work') }}">添加作品</a></li>
+							<li><a href="{{ url_for('add_author') }}">添加作者</a></li>
+							<li><a href="{{ url_for('add_dynasty') }}">添加朝代</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
