now can add work & dynasty

--- a/static/style/page.less
+++ b/static/style/page.less
@@ -1,11 +1,13 @@
 body{
-	margin: 60px 0 0 0;
+	margin: 65px 0 0 0;
 }
 
 // page index
 //-----------------------------------------------------
 #page-index{
 	.work-item{
+		margin-bottom: 20px;
+
 		.work-title{
 			font-size: 35px;
 			line-height: 40px;
@@ -47,6 +49,16 @@ body{
 		font-size: 18px;
 		line-height: 25px;
 		font-family: '';
+	}
+}
+
+// page add work
+//-----------------------------------------------------
+#page-add-work{
+	#form-add-work{
+		#work-content{
+			width: 500px;
+		}
 	}
 }
 
@@ -92,6 +104,8 @@ body{
 //-----------------------------------------------------
 #page-dynasty{
 	.dynasty-item{
+		margin-bottom: 20px;
+		
 		.dynasty{
 			font-size: 35px;
 			line-height: 40px;
@@ -123,5 +137,15 @@ body{
 		font-size: 18px;
 		line-height: 25px;
 		font-family: '';
+	}
+}
+
+// page add dynasty
+//-----------------------------------------------------
+#page-add-dynasty{
+	#form-add-dynasty{
+		#dynasty-introduction{
+			width: 500px;
+		}
 	}
 }
