--- a/templates/add_author.html
+++ b/templates/add_author.html
@@ -14,6 +14,21 @@
 			<label>作者</label>
 			<input type="text" name="author"/>
 		</div>
+		
+		<div>
+			<label>生年</label>
+			<input type="text" name="birthYear"/>
+		</div>
+		
+		<div>
+			<label>卒年</label>
+			<input type="text" name="deathYear"/>
+		</div>
+
+		<div>
+			<label>朝代</label>
+			<input type="text" name="dynasty"/>
+		</div>		
 
 		<div>
 			<label>简介</label>
