--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,9 +47,9 @@
 						</a>
 
 						<ul class="dropdown-menu">
-							<li><a href="{{ url_for('add_work') }}">添加作品</a></li>
-							<li><a href="{{ url_for('add_author') }}">添加作者</a></li>
-							<li><a href="{{ url_for('add_dynasty') }}">添加朝代</a></li>
+							<li><a href="{{ url_for('add_work') }}">作品</a></li>
+							<li><a href="{{ url_for('add_author') }}">作者</a></li>
+							<li><a href="{{ url_for('add_dynasty') }}">朝代</a></li>
 						</ul>
 					</div>
 				</div>
