--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,21 @@
 
 {% block body %}
 
-	{% for work in works %}
-	<div class="work-item">
-		<div class="work-title"><a href="{{ url_for('single_work', workID = work.WorkID) }}">{{ work.Title }}</a></div>
-		<div class="work-author">
-			[<a href="{{ url_for('single_dynasty', dynastyID = work.DynastyID) }}">{{ work.Dynasty }}</a>]
-			<a href="{{ url_for('single_author', authorID=work.AuthorID) }}">{{ work.Author }}</a></div>
-		<div class="work-content">{{ work.Content }}</div>
+<div class="row">
+	<div class="span9">
+		{% for work in works %}
+		<div class="work-item">
+			<div class="work-title"><a href="{{ url_for('single_work', workID = work.WorkID) }}">{{ work.Title }}</a></div>
+			<div class="work-author">
+				[<a href="{{ url_for('single_dynasty', dynastyID = work.DynastyID) }}">{{ work.Dynasty }}</a>]
+				<a href="{{ url_for('single_author', authorID=work.AuthorID) }}">{{ work.Author }}</a></div>
+			<div class="work-content">{{ work.Content }}</div>
+		</div>
+		{% endfor %}
 	</div>
-	{% endfor %}
+
+	<div class="span3"></div>
+</div>
+
 
 {% endblock %}
