update css style

--- a/static/style/page.less
+++ b/static/style/page.less
@@ -1,15 +1,30 @@
 body{
 	margin: 65px 0 0 0;
+	
+	#main-wap{
+		font-size: 18px;
+		line-height: 26px;
+
+		a{
+			color: rgb(0, 85, 128)
+		}
+
+		h4{
+			font-size: 20px;
+			color: #CD9B1D;
+			margin: 20px 0 15px 0;
+		}
+	}
 }
 
 // page index
 //-----------------------------------------------------
 #page-index{
 	.work-item{
-		margin-bottom: 20px;
+		margin-bottom: 40px;
 
 		.work-title{
-			font-size: 35px;
+			font-size: 30px;
 			line-height: 40px;
 			margin-bottom: 5px;
 			font-weight: bold;
@@ -17,14 +32,7 @@ body{
 		}
 
 		.work-author{
-			font-size: 18px;
 			margin-bottom: 10px;
-		}
-
-		.work-content{
-			font-size: 18px;
-			line-height: 25px;
-			font-family: '';
 		}
 	}
 }
@@ -33,7 +41,7 @@ body{
 //-----------------------------------------------------
 #page-single-work{
 	.work-title{
-		font-size: 35px;
+		font-size: 30px;
 		line-height: 40px;
 		margin-bottom: 5px;
 		font-weight: bold;
@@ -41,14 +49,10 @@ body{
 	}
 
 	.work-author{
-		font-size: 18px;
 		margin-bottom: 10px;
 	}
 
 	.work-content{
-		font-size: 18px;
-		line-height: 25px;
-		font-family: '';
 	}
 }
 
@@ -66,10 +70,10 @@ body{
 //-----------------------------------------------------
 #page-author{
 	.author-item{
-		margin-bottom: 20px;
+		margin-bottom: 40px;
 
 		.author{
-			font-size: 35px;
+			font-size: 30px;
 			line-height: 40px;
 			margin-bottom: 5px;
 			font-weight: bold;
@@ -83,8 +87,6 @@ body{
 		}
 
 		.author-introduction{
-			font-size: 18px;
-			line-height: 25px;		
 		}
 	}
 }
@@ -93,17 +95,27 @@ body{
 //-----------------------------------------------------
 #page-single-author{
 	.author{
-		font-size: 35px;
+		font-size: 30px;
 		line-height: 40px;
 		margin-bottom: 5px;
 		font-weight: bold;
 		font-family: '宋体';			
 	}
 
-	.author-introduction{
-		font-size: 18px;
-		line-height: 25px;
-		font-family: '';			
+	.author-period{
+		margin-bottom: 10px;
+	}
+
+	.author-introduction{		
+	}
+
+	.work-item{
+		margin-bottom: 15px;
+
+		.work-title{
+			font-weight: bold;
+			margin-bottom: 5px;
+		}
 	}
 }
 
@@ -121,10 +133,10 @@ body{
 //-----------------------------------------------------
 #page-dynasty{
 	.dynasty-item{
-		margin-bottom: 20px;
+		margin-bottom: 40px;
 		
 		.dynasty{
-			font-size: 35px;
+			font-size: 30px;
 			line-height: 40px;
 			margin-bottom: 5px;
 			font-weight: bold;
@@ -139,9 +151,6 @@ body{
 		}
 
 		.dynasty-introduction{
-			font-size: 18px;
-			line-height: 25px;
-			font-family: '';
 		}
 	}
 }
@@ -150,7 +159,7 @@ body{
 //-----------------------------------------------------
 #page-single-dynasty{
 	.dynasty{
-		font-size: 35px;
+		font-size: 30px;
 		line-height: 40px;
 		margin-bottom: 5px;
 		font-weight: bold;
@@ -158,9 +167,19 @@ body{
 	}
 
 	.dynasty-introduction{
-		font-size: 18px;
-		line-height: 25px;
-		font-family: '';
+	}
+
+	.author-item{
+		margin-bottom: 15px;
+
+		.author{
+			margin-bottom: 5px;
+			font-weight: bold;
+		}
+
+		.author-introduction{
+
+		}
 	}
 }
 
