--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,8 @@
 		<div class="work-item">
 			<div class="work-title"><a href="{{ url_for('single_work', workID = work.WorkID) }}">{{ work.Title }}</a></div>
 			<div class="work-author">
-				[<a href="{{ url_for('single_dynasty', dynastyID = work.DynastyID) }}">{{ work.Dynasty }}</a>]
-				<a href="{{ url_for('single_author', authorID=work.AuthorID) }}">{{ work.Author }}</a></div>
-			<div class="work-content">{{ work.Content }}</div>
+				〔<a href="{{ url_for('single_dynasty', dynastyID = work.DynastyID) }}">{{ work.Dynasty }}</a>〕<a href="{{ url_for('single_author', authorID=work.AuthorID) }}">{{ work.Author }}</a></div>
+			<div class="work-content">{{ work.Content|truncate(100, True) }}</div>
 		</div>
 		{% endfor %}
 	</div>
