--- a/static/style/page.less
+++ b/static/style/page.less
@@ -5,8 +5,12 @@ body{
 		font-size: 18px;
 		line-height: 26px;
 
-		a{
+		a:not[class='btn']{
 			color: rgb(0, 85, 128)
+		}
+
+		textarea{
+			width: 500px;
 		}
 
 		h4{
@@ -32,7 +36,12 @@ body{
 		}
 
 		.work-author{
-			margin-bottom: 10px;
+			font-size: 18px;
+			font-weight: normal;
+
+			a{
+				color: #333;
+			}
 		}
 	}
 }
@@ -59,11 +68,7 @@ body{
 // page add work
 //-----------------------------------------------------
 #page-add-work{
-	#form-add-work{
-		#work-content{
-			width: 500px;
-		}
-	}
+
 }
 
 // page author
@@ -81,8 +86,11 @@ body{
 
 			.author-dynasty{
 				font-size: 18px;
-				margin-left: 5px;
 				font-weight: normal;
+				
+				a{
+					color: #333;
+				}
 			}
 		}
 
@@ -119,14 +127,11 @@ body{
 	}
 }
 
-// page add author
+// page add author & edit author
 //-----------------------------------------------------
-#page-add-author{
-	#form-add-author{
-		#author-introduction{
-			width: 500px;
-		}
-	}
+#page-add-author #form-add-author,
+#page-edit-author #form-edit-author{
+
 }
 
 // page dynasty
@@ -143,9 +148,10 @@ body{
 			font-family: '宋体';
 
 			.dynasty-period{
-				font-size: 15px;
+				font-size: 18px;
 				margin-left: 5px;
-				font-family: '微软雅黑';
+				font-weight: normal;
+				font-family: 'arial','宋体';
 				font-weight: normal;
 			}
 		}
@@ -186,9 +192,4 @@ body{
 // page add dynasty
 //-----------------------------------------------------
 #page-add-dynasty{
-	#form-add-dynasty{
-		#dynasty-introduction{
-			width: 500px;
-		}
-	}
 }
