--- a/templates/author.html
+++ b/templates/author.html
@@ -10,7 +10,7 @@
 		{% for author in authors %}
 		<div class='author-item'>
 			<div class='author'>
-				<a href="{{ url_for('single_author', authorID=author.AuthorID) }}">{{ author.Author }}</a><sup class='author-dynasty'>[{{ author.Dynasty }}]</sup>
+				<a href="{{ url_for('single_author', authorID=author.AuthorID) }}">{{ author.Author }}</a><sup class='author-dynasty'>〔<a href="{{ url_for('single_dynasty', dynastyID=author.DynastyID) }}">{{ author.Dynasty }}</a>〕</sup>
 			</div>
 			<div class='author-introduction'>{{ author.Introduction }}</div>
 		</div>
