--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,13 +19,13 @@
 					<!-- nav -->
 					<ul class="nav">
 						<li><a href="{{ url_for('index') }}">首页</a></li>
-						<li><a href="{{ url_for('author') }}">作者</a></li>
+						<li><a href="{{ url_for('author') }}">文学家</a></li>
 						<li><a href="{{ url_for('dynasty') }}">朝代</a></li>
 					</ul>
 
 					<!-- search -->
 					<form class="navbar-search">
-						<input type="text" class="search-query" placeholder="Search">
+						<input type="text" class="search-query" placeholder="作品 / 文学家 / 朝代">
 					</form>
 
 					<!-- user info -->
@@ -49,7 +49,7 @@
 
 							<ul class="dropdown-menu">
 								<li><a href="{{ url_for('add_work') }}">作品</a></li>
-								<li><a href="{{ url_for('add_author') }}">作者</a></li>
+								<li><a href="{{ url_for('add_author') }}">文学家</a></li>
 								<li><a href="{{ url_for('add_dynasty') }}">朝代</a></li>
 							</ul>
 						</li>
