--- a/templates/single_work.html
+++ b/templates/single_work.html
@@ -7,6 +7,16 @@
 
 <div class="row">
 	<div class="span9">
+		<div class="btn-group pull-right">
+			<a class="btn btn-primary" href="{{ url_for('edit_work', workID=work.WorkID) }}">编辑</a>
+			<button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+				<span class="caret"></span>
+			</button>
+			<ul class="dropdown-menu">
+				<li><a href="#">删除</a></li>
+			</ul>
+		</div>
+
 		<div class="work-title">{{ work.Title }}</div>
 		<div class="work-author">
 			〔<a href="{{ url_for('single_dynasty', dynastyID = work.DynastyID) }}">{{ work.Dynasty }}</a>〕<a href="{{ url_for('single_author', authorID=work.AuthorID) }}">{{ work.Author }}</a></div>
