update the forms style

--- a/static/style/page.less
+++ b/static/style/page.less
@@ -18,6 +18,14 @@ body{
 			color: #CD9B1D;
 			margin: 20px 0 15px 0;
 		}
+
+		legend{
+			//padding-left: 180px;
+		}
+
+		.input-append{
+			display: block;
+		}
 	}
 }
 
