--- a/templates/single_work.html
+++ b/templates/single_work.html
@@ -13,7 +13,7 @@
 				<span class="caret"></span>
 			</button>
 			<ul class="dropdown-menu">
-				<li><a href="#">删除</a></li>
+				<li><a href="{{ url_for('delete_work', workID=work.WorkID) }}">删除</a></li>
 			</ul>
 		</div>
 
