--- a/templates/add_author.html
+++ b/templates/add_author.html
@@ -5,40 +5,56 @@
 
 {% block body %}
 
-<form id="form-add-author" method="post" action="{{ url_for('add_author') }}">
+<form id="form-add-author" class="form-horizontal" method="post" action="{{ url_for('add_author') }}">
 	<fieldset>
 		<legend>添加文学家</legend>
 
-		<div>
-			<label>文学家</label>
-			<input type="text" name="author"/>
+		<div class="control-group">
+			<label class="control-label">姓名</label>
+			<div class="controls">
+				<input type="text" name="author"/>
+			</div>
 		</div>
 
-		<div>
-			<label>朝代</label>
-			<select name='dynastyID'>
-				{% for dynasty in dynasties %}
-				<option value="{{ dynasty.DynastyID }}">{{ dynasty.Dynasty }}</option>
-				{% endfor %}
-			</select>
+		<div class="control-group">
+			<label class="control-label">朝代</label>
+			<div class="controls">
+				<select name='dynastyID'>
+					{% for dynasty in dynasties %}
+					<option value="{{ dynasty.DynastyID }}">{{ dynasty.Dynasty }}</option>
+					{% endfor %}
+				</select>
+			</div>
 		</div>
 		
-		<div>
-			<label>生年</label>
-			<input type="text" name="birthYear" />
+		<div class="control-group">
+			<label class="control-label">生年</label>
+			<div class="controls input-append">
+				<input type="text" name="birthYear" />
+				<span class="add-on">年</span>
+			</div>
 		</div>
 		
-		<div>
-			<label>卒年</label>
-			<input type="text" name="deathYear" />
+		<div class="control-group">
+			<label class="control-label">卒年</label>
+			<div class="controls input-append">
+				<input type="text" name="deathYear" />
+				<span class="add-on">年</span>
+			</div>
 		</div>
 
-		<div>
-			<label>简介</label>
-			<textarea id="author-introduction" rows="10" name="introduction"></textarea>
+		<div class="control-group">
+			<label class="control-label">简介</label>
+			<div class="controls">
+				<textarea id="author-introduction" rows="10" name="introduction"></textarea>
+			</div>
 		</div>
 
-		<input type="submit" value="提交" class="btn btn-primary" />
+		<div class="control-group">
+			<div class="controls">
+				<input type="submit" value="提交" class="btn btn-primary" />
+			</div>
+		</div>
 	</fieldset>
 </form>
 
