--- a/templates/edit_dynasty.html
+++ b/templates/edit_dynasty.html
@@ -5,31 +5,45 @@
 
 {% block body %}
 
-<form id="form-edit-dynasty" method="post" action="{{ url_for('edit_dynasty', dynastyID=dynasty.DynastyID) }}">
+<form id="form-edit-dynasty" class="form-horizontal" method="post" action="{{ url_for('edit_dynasty', dynastyID=dynasty.DynastyID) }}">
 	<fieldset>
 		<legend>编辑朝代</legend>
 
-		<div>
-			<label>朝代</label>
-			<input type="text" name="dynasty" value="{{ dynasty.Dynasty }}" />
+		<div class="control-group">
+			<label class="control-label" for="input-dynasty">朝代</label>
+			<div class="controls">
+				<input type="text" name="dynasty" id="input-dynasty" value="{{ dynasty.Dynasty }}" />
+			</div>
 		</div>
 
-		<div>
-			<label>起始年</label>
-			<input type="text" name="startYear" value="{{ dynasty.StartYear }}" />
+		<div class="control-group">
+			<label class="control-label" for="input-start">起始年</label>
+			<div class="controls input-append">
+				<input type="text" name="startYear" id="input-start" value="{{ dynasty.StartYear }}" />
+				<span class="add-on">年</span>
+			</div>
 		</div>
 
-		<div>
-			<label>结束年</label>
-			<input type="text" name="endYear" value="{{ dynasty.EndYear }}" />
+		<div class="control-group">
+			<label class="control-label" for="input-end">结束年</label>
+			<div class="controls input-append">
+				<input type="text" name="endYear" id="input-end" value="{{ dynasty.EndYear }}" />
+				<span class="add-on">年</span>
+			</div>
 		</div>
 
-		<div>
-			<label>简介</label>
-			<textarea id='dynasty-introduction' rows="10" name="introduction" >{{ dynasty.Introduction }}</textarea>
+		<div class="control-group">
+			<label class="control-label" for="input-intro">简介</label>
+			<div class="controls">
+				<textarea rows="10" name="introduction" id="input-intro" >{{ dynasty.Introduction }}</textarea>
+			</div>
 		</div>
 
-		<input type="submit" value="提交" class="btn btn-primary" />
+		<div class="control-group">
+			<div class="controls">
+				<input type="submit" value="提交" class="btn btn-primary" />
+			</div>
+		</div>
 	</fieldset>
 </form>
 
