--- a/templates/edit_work.html
+++ b/templates/edit_work.html
@@ -5,35 +5,47 @@
 
 {% block body %}
 
-<form id="form-edit-work" method="post" action="{{ url_for('edit_work', workID=work.WorkID) }}">
+<form id="form-edit-work" class="form-horizontal" method="post" action="{{ url_for('edit_work', workID=work.WorkID) }}">
 	<fieldset>
 		<legend>编辑作品</legend>
 
-		<div>
-			<label>类别</label>
-			<select name='type'>
-				<option value='shi' {% if work.Type == 'shi' %}selected="selected"{% endif %}>诗</option>
-				<option value='ci' {% if work.Type == 'ci' %}selected="selected"{% endif %}>词</option>
-				<option value='wen' {% if work.Type == 'wen' %}selected="selected"{% endif %}>文</option>
-			</select>
+		<div class="control-group">
+			<label class="control-label">类别</label>
+			<div class="controls">
+				<select name='type'>
+					<option value='shi' {% if work.Type == 'shi' %}selected="selected"{% endif %}>诗</option>
+					<option value='ci' {% if work.Type == 'ci' %}selected="selected"{% endif %}>词</option>
+					<option value='wen' {% if work.Type == 'wen' %}selected="selected"{% endif %}>文</option>
+				</select>
+			</div>
 		</div>
 
-		<div>
-			<label>标题</label>
-			<input type="text" name="title" value="{{ work.Title }}" />
+		<div class="control-group">
+			<label class="control-label">标题</label>
+			<div class="controls">
+				<input type="text" name="title" value="{{ work.Title }}" />
+			</div>
 		</div>
 
-		<div>
-			<label>作者</label>
-			<input type="text" name="author" value="{{ work.Author }}" />
+		<div class="control-group">
+			<label class="control-label">作者</label>
+			<div class="controls">
+				<input type="text" name="author" value="{{ work.Author }}" />
+			</div>
 		</div>
 
-		<div>
-			<label>内容</label>
-			<textarea name="content" id="work-content" rows='10'>{{ work.Content }}</textarea>
+		<div class="control-group">
+			<label class="control-label">内容</label>
+			<div class="controls">
+				<textarea name="content" id="work-content" rows='10'>{{ work.Content }}</textarea>
+			</div>
 		</div>
 
-		<input type="submit" value="提交" class="btn btn-primary" />
+		<div class="control-group">
+			<div class="controls">
+				<input type="submit" value="提交" class="btn btn-primary" />
+			</div>
+		</div>
 	</fieldset>
 </form>
 
