update micro css style

--- a/static/style/page.less
+++ b/static/style/page.less
@@ -19,14 +19,18 @@ body{
 			margin: 20px 0 15px 0;
 		}
 
-		legend{
-			//padding-left: 180px;
-		}
 
-		.input-append{
-			display: block;
-		}
 	}
+}
+
+// fix bootstrap css
+//-----------------------------------------------------
+.navbar-search .search-query{
+	line-height: 1.2;
+}
+
+.input-append{
+	display: block;
 }
 
 // page index
