use markdown and apply different style to shi,ci,wen

--- a/static/style/page.less
+++ b/static/style/page.less
@@ -64,16 +64,35 @@ body{
 	.work-title{
 		font-size: 30px;
 		line-height: 40px;
-		margin-bottom: 5px;
+		margin-top: 10px;
+		margin-bottom: 12px;
 		font-weight: bold;
 		font-family: '宋体';
+		text-align: center;
+		clear: both;
 	}
 
 	.work-author{
-		margin-bottom: 10px;
+		text-align: center;
+		margin-bottom: 20px;
+		padding-right: 6px;
 	}
 
 	.work-content{
+		font-family: '宋体';
+		font-weight: bold;
+	}
+	.work-type-shi{
+		text-align: center;
+	}
+	.work-type-ci{
+		text-indent: 2em;
+	}
+	.work-type-wen{
+		p{
+			text-indent: 2em;
+			margin-bottom: 18px;
+		}
 	}
 }
 
